Fix height of aside-nav-wrap

--- a/desktop.blocks/aside-nav-wrap/aside-nav-wrap.styl
+++ b/desktop.blocks/aside-nav-wrap/aside-nav-wrap.styl
@@ -2,3 +2,4 @@
   display: inline-block
   vertical-align: top
   min-width: 76px
+  height: 100%
